Cleans up dependencies and configuration. Resolves some warnings and deprecations.